src/tests/testfiles/unary-operators/types-7.txt
Error at 5:5: Binary operator operands must have the same type (have float and float *)
f = ff;
^
